--- a/lib/generators/ornament/templates/app/assets/stylesheets/ornament/utilities/_color-link.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/ornament/utilities/_color-link.css.scss
@@ -1,5 +1,8 @@
 @import "compass/typography/links/link-colors";
 
 @mixin color-link($link, $hover: false) {
+  @if ($hover == false) {
+    $hover: $link;
+  }
   @include link-colors($link, $hover, $hover, $link, $link);
 }
