--- a/lib/generators/ornament/templates/app/views/styleguide/gallery.html.erb
+++ b/lib/generators/ornament/templates/app/views/styleguide/gallery.html.erb
@@ -1,11 +1,11 @@
-<% content_for :title, "Fotorama" %>
+<% content_for :title, "Gallery" %>
 
 <style>
-  pre { 
+  pre {
     display: none;
-    border-radius: 6px; 
-    border: 1px solid #ccc; 
-    background: #eee; 
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background: #eee;
     padding: 16px;
     overflow: auto;
   }
@@ -28,7 +28,7 @@
   }
 </style>
 
-<div class="rhythm">
+<div>
 
   <section class="spacing">
 
