--- a/lib/generators/ornament/templates/app/views/styleguide/index.html.erb
+++ b/lib/generators/ornament/templates/app/views/styleguide/index.html.erb
@@ -1,6 +1,6 @@
-<div class="spacing">
+<% content_for :title, "Components" %>
 
-  <h2 class="heading-two">Components</h2>
+<div class="spacing">
 
   <ul>
     <li><a href="/styleguide/align">Align</a></li>
@@ -10,7 +10,7 @@
     <li><a href="/styleguide/field">Field</a></li>
     <li><a href="/styleguide/float">Float</a></li>
     <li><a href="/styleguide/footer">Footer</a></li>
-    <li><a href="/styleguide/fotorama">Fotorama - Slider and Galleries</a></li>
+    <li><a href="/styleguide/gallery">Gallery</a></li>
     <li><a href="/styleguide/header">Header</a></li>
     <li><a href="/styleguide/heading">Heading</a></li>
     <li><a href="/styleguide/island">Island</a></li>
@@ -18,12 +18,13 @@
     <li><a href="/styleguide/navigation">Navigation</a></li>
     <li><a href="/styleguide/navigation_dropdown">Navigation Dropdown</a></li>
     <li><a href="/styleguide/navigation_horizontal">Navigation Horizontal</a></li>
-    <li><a href="/styleguide/settings_preview">Settings Preview</a></li>
+    <li><a href="/styleguide/normalize">Normalize</a></li>
     <li><a href="/styleguide/skip_link">Skip Link</a></li>
+    <li><a href="/styleguide/slider">Slider</a></li>
     <li><a href="/styleguide/spacing">Spacing</a></li>
     <li><a href="/styleguide/split">Split</a></li>
+    <li><a href="/styleguide/tab-set">Tab Set</a></li>
     <li><a href="/styleguide/table">Table</a></li>
-    <li><a href="/styleguide/tabs">Tabs</a></li>
     <li><a href="/styleguide/tooltip">Tooltip</a></li>
   </ul>
 
