--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_field.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_field.css.scss
@@ -1,35 +1,30 @@
-@import "compass/css3/inline-block";
 @import "compass/utilities/general/clearfix";
-@import "ornament/utilities/typeface";
 
-$field-error-color:             $error-color;
 $field-hanging-required-marks:  true;
-$field-label-typeface:          $heading-six-typeface;
-$field-required-color:          $notice-color;
 
 .field {
   @include pie-clearfix;
 }
 
 .field--label {
-  @include typeface($field-label-typeface);
+  @include font($bold-font);
   display: block;
   > abbr[title="required"] {
     @if ($field-hanging-required-marks) {
       float: left;
       margin-left: -0.8em;
     }
-    color: $field-required-color;
+    color: #900;
   }
 }
 
 .field--error {
-  @include typeface($small-typeface);
-  color: $field-error-color;
+  @include gauge($small-gauge);
+  color: #900;
 }
 
 .field--hint {
-  @include typeface($small-typeface);
+  @include gauge($small-gauge);
 }
 
 .field-horizontal {
