--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_footer.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_footer.css.scss
@@ -1,22 +1,11 @@
-@import "ornament/utilities/color-link";
-@import "ornament/utilities/decorate-link";
-@import "ornament/utilities/typeface";
-
-$footer-background-color: #cccccc;
-$footer-typeface:         $body-font, $base-font-size * 0.8;
-$footer-color:            #333333;
-$footer-link-color:       $link-color;
-$footer-link-hover-color: $link-hover-color;
-$footer-padding:          $small-unit;
-
 .footer {
-  @include typeface($footer-typeface);
-  color: $footer-color;
-  background: $footer-background-color;
+  @include gauge($small-gauge);
+  color: #333;
+  background: #ccc;
   height: 100%;
-  padding: $footer-padding;
+  padding: $small-unit;
   a {
-    @include decorate-link(none, none);
-    @include color-link($footer-link-color, $footer-link-hover-color);
+    @include color-link(#ccc, #ccc);
+    @include decorate-link(underline, none);
   }
 }
