--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_heading.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_heading.css.scss
@@ -1,25 +1,25 @@
-@import "ornament/utilities/typeface";
-
 .heading-one {
-  @include typeface($heading-one-typeface);
+  @include heading-one;
 }
 
 .heading-two {
-  @include typeface($heading-two-typeface);
+  @include heading-two;
 }
 
 .heading-three {
-  @include typeface($heading-three-typeface);
+  @include heading-three;
 }
 
 .heading-four {
-  @include typeface($heading-four-typeface);
+  @include heading-four;
 }
 
 .heading-five {
-  @include typeface($heading-five-typeface);
+  @include heading-five;
 }
 
 .heading-six {
-  @include typeface($heading-six-typeface);
+  @include heading-six;
 }
+
+
