--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_layout.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_layout.css.scss
@@ -2,10 +2,11 @@
 @import "compass/css3/transition";
 
 $layout-animation-duration:     0.5s;
-$layout-background:             $background-color;
+$layout-background:             #eee;
 $layout-breakpoint:             $large-breakpoint;
 $layout-container-width:        $container-width;
-$layout-desktop-edge-gap:       0;
+$layout-content-background:     #fff;
+$layout-desktop-edge-gap:       $default-unit;
 $layout-desktop-footer-gap:     $default-unit;
 $layout-desktop-header-gap:     $default-unit;
 $layout-footer-height:          100px;
@@ -29,7 +30,7 @@ $layout-mobile-header-gap:      $small-unit;
 
   .layout--content {
     @include single-transition(transform, $layout-animation-duration);
-    background: $layout-background;
+    background: $layout-content-background;
     min-height: 100%;
   }
 
@@ -122,6 +123,7 @@ $layout-mobile-header-gap:      $small-unit;
 @media screen and (min-width: $layout-breakpoint) {
 
   .layout {
+    background: $layout-background;
     left: 0;
     min-height: 100%;
     position: absolute;
@@ -154,7 +156,7 @@ $layout-mobile-header-gap:      $small-unit;
   }
 
   .layout--main {
-    background: $layout-background;
+    background: $layout-content-background;
     padding-bottom: $layout-desktop-footer-gap;
     padding-left: $layout-desktop-edge-gap;
     padding-right: $layout-desktop-edge-gap;
