--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_navigation-horizontal.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_navigation-horizontal.css.scss
@@ -4,22 +4,22 @@
 
 $navigation-horizontal-z-index:               2;
 
-$navigation-horizontal-level-1-active-color:  $link-color;
+$navigation-horizontal-level-1-active-color:  #00aad5;
 $navigation-horizontal-level-1-background:    transparent;
-$navigation-horizontal-level-1-color:         $foreground-color;
-$navigation-horizontal-level-1-hover-color:   $link-color;
-$navigation-horizontal-level-1-padding:       0.2em 0;
-$navigation-horizontal-level-1-spacing:       0.5em;
+$navigation-horizontal-level-1-color:         #333;
+$navigation-horizontal-level-1-hover-color:   #00aad5;
+$navigation-horizontal-level-1-padding:       $xx-small-unit 0;
+$navigation-horizontal-level-1-spacing:       $x-small-unit;
 
 $navigation-horizontal-level-2-active-color:  $navigation-horizontal-level-1-active-color;
-$navigation-horizontal-level-2-background:    #222222;
-$navigation-horizontal-level-2-color:         #ffffff;
+$navigation-horizontal-level-2-background:    #222;
+$navigation-horizontal-level-2-color:         #fff;
 $navigation-horizontal-level-2-hover-color:   $navigation-horizontal-level-1-hover-color;
 $navigation-horizontal-level-2-padding:       $navigation-horizontal-level-1-padding;
 $navigation-horizontal-level-2-spacing:       $navigation-horizontal-level-1-spacing;
 
 $navigation-horizontal-level-3-active-color:  $navigation-horizontal-level-2-active-color;
-$navigation-horizontal-level-3-background:    #111111;
+$navigation-horizontal-level-3-background:    #111;
 $navigation-horizontal-level-3-color:         $navigation-horizontal-level-2-color;
 $navigation-horizontal-level-3-hover-color:   $navigation-horizontal-level-2-hover-color;
 $navigation-horizontal-level-3-padding:       $navigation-horizontal-level-2-padding;
