--- a/lib/generators/ornament/templates/app/views/styleguide/table.html.erb
+++ b/lib/generators/ornament/templates/app/views/styleguide/table.html.erb
@@ -32,7 +32,7 @@
     </tr>
   </table>
 
-  <table class="table table-flush table-ruled">
+  <table class="table table-flush table-full-width">
     <tr>
       <th>First Name</th>
       <td>Jane</td>
@@ -47,7 +47,7 @@
     </tr>
   </table>
 
-  <table class="table table-flush table-ruled table-full-width">
+  <table class="table table-flush table-full-width table-small">
     <tr>
       <th>First Name</th>
       <td>Jane</td>
@@ -62,18 +62,18 @@
     </tr>
   </table>
 
-  <table class="table table-flush table-ruled table-full-width table-small">
+  <table class="table table-flush table-full-width table-small table-two-col">
     <tr>
-      <th>First Name</th>
-      <td>Jane</td>
+      <th>Lorem ipsum...</th>
+      <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
     </tr>
     <tr>
-      <th>Last Name</th>
-      <td>Doe</td>
+      <th>The quick...</th>
+      <td>The quick brown fox jumps over the lazy dog.</td>
     </tr>
     <tr>
-      <th>DOB</th>
-      <td>25/06/1982</td>
+      <th>Now is the time...</th>
+      <td>Now is the time for all good men to come to the aid of their party.</td>
     </tr>
   </table>
 
