--- a/test/dummy/app/assets/stylesheets/_settings.css.scss
+++ b/test/dummy/app/assets/stylesheets/_settings.css.scss
@@ -8,7 +8,7 @@
 
 // CONTAINER WIDTH
 //
-// Width of the container (desktop only).
+// Maximum width of the container.
 //
 
 $container-width: 960px;
@@ -27,83 +27,74 @@ $large-breakpoint: 800px;
 
 
 
-// BASE UNITS
+// BASE SIZES
 //
-//
-// The base font size should be set in pixels.
-//
-// The base line height should be unitless (ratio of line height to font size).
+// $default-font-size: size-in-pixels;
+// $default-line-height: size-without-units;
 //
 
-$base-font-size:    16px;
-$base-line-height:  1.5;
-$base-line-size:    $base-font-size * $base-line-height;
+$default-font-size:   16px;
+$default-line-height: 1.5;
+
+
+
+// GAUGES
+//
+// If unitless, the font-size will be multiplied by $default-font-size.
+//
+// $gauge: font-size, line-height;
+//
+
+$small-gauge:       0.8, 1.6;
+$default-gauge:     1.0, 1.5;
+$large-gauge:       1.2, 1.4;
+$x-large-gauge:     1.5, 1.3;
+$xx-large-gauge:    1.8, 1.2;
+$xxx-large-gauge:   2.0, 1.1;
+$xxxx-large-gauge:  4.0, 1.0;
+
+
+
+// SPACING UNITS
+//
+// A default unit should be the space left between paragraphs.
+//
+
+$default-unit:    $default-font-size * $default-line-height;
+
+$small-unit:      $default-unit * pow(1.61803398875, -1);
+$x-small-unit:    $default-unit * pow(1.61803398875, -2);
+$xx-small-unit:   $default-unit * pow(1.61803398875, -3);
+$xxx-small-unit:  $default-unit * pow(1.61803398875, -4);
+
+$large-unit:      $default-unit * pow(1.61803398875,  1);
+$x-large-unit:    $default-unit * pow(1.61803398875,  2);
+$xx-large-unit:   $default-unit * pow(1.61803398875,  3);
+$xxx-large-unit:  $default-unit * pow(1.61803398875,  4);
 
 
 
 // FONTS
 //
-//
-// The default fonts (family, style, weight).
-//
-
-$body-font:           (Helvetica, sans-serif)  normal  normal;
-$heading-alpha-font:  (Helvetica, sans-serif)  normal  bold;
-$heading-beta-font:   (Helvetica, sans-serif)  normal  bold;
-$bold-font:           (Helvetica, sans-serif)  normal  bold;
-$italic-font:         (Helvetica, sans-serif)  italic  normal;
-
-
-
-// TYPEFACES
-//
-// The default typefaces (font, size, line height).
+// $font: family, style, weight;
 //
 
-$body-typeface:           $body-font,           $base-font-size * 1.0,  $base-line-height / 1.0;
-$heading-one-typeface:    $heading-alpha-font,  $base-font-size * 4.0,  $base-line-height / 1.5;
-$heading-two-typeface:    $heading-alpha-font,  $base-font-size * 2.0,  $base-line-height / 1.4;
-$heading-three-typeface:  $heading-beta-font,   $base-font-size * 1.8,  $base-line-height / 1.3;
-$heading-four-typeface:   $heading-beta-font,   $base-font-size * 1.5,  $base-line-height / 1.2;
-$heading-five-typeface:   $bold-font,           $base-font-size * 1.2,  $base-line-height / 1.1;
-$heading-six-typeface:    $bold-font,           $base-font-size * 1.0,  $base-line-height / 1.0;
-$small-typeface:          $body-font,           $base-font-size * 0.8,  $base-line-height / 1.1;
+$default-font:  (Helvetica, sans-serif)  normal  normal;
+$major-font:    (Helvetica, sans-serif)  normal  bold;
+$minor-font:    (Helvetica, sans-serif)  normal  bold;
+$bold-font:     (Helvetica, sans-serif)  normal  bold;
+$italic-font:   (Helvetica, sans-serif)  italic  normal;
 
 
 
-// COLORS
+// BASIC THEME
 //
-// Default colors.
+// Backgrounds and colors.
 //
 
-$foreground-color:  #333333;
-$background-color:  #ffffff;
-$link-color:        #00aad5;
-$link-hover-color:  false;
-$error-color:       #990000;
-$notice-color:      #ff6600;
-$success-color:     #009900;
-
-
-
-// SIZES
-//
-//
-// Setup a sizing units.
-//
-
-$sizing-ratio: 1.61803398875; // golden ratio
-$sizing-unit:  $base-line-size;
-
-$xxx-small-unit: $sizing-unit * pow($sizing-ratio, -4);
-$xx-small-unit:  $sizing-unit * pow($sizing-ratio, -3);
-$x-small-unit:   $sizing-unit * pow($sizing-ratio, -2);
-$small-unit:     $sizing-unit * pow($sizing-ratio, -1);
-$default-unit:   $sizing-unit * pow($sizing-ratio,  0);
-$large-unit:     $sizing-unit * pow($sizing-ratio,  1);
-$x-large-unit:   $sizing-unit * pow($sizing-ratio,  2);
-$xx-large-unit:  $sizing-unit * pow($sizing-ratio,  3);
-$xxx-large-unit: $sizing-unit * pow($sizing-ratio,  4);
+$body-background: #fff none 0 0 no-repeat;
+$body-color:      #333;
+$link-color:      #00aad5;
 
 
 
@@ -117,9 +108,10 @@ $input-background:        #ffffff;
 $input-border:            1px solid #999;
 $input-border-radius:     0;
 $input-color:             #333333;
-$input-typeface:          $body-font, $base-font-size, 1.5;
+$input-font:              $default-font;
+$input-gauge:             1.0, 1.5;
 $input-padding:           0.3em 0.2em 0.1em;
 $input-width:             100%;
-$textarea-height:         $base-line-size*5;
+$textarea-height:         24px * 5;
 
 
