Begin work on future version.
- Restructure CSS.
- Add Simple Form and Kaminari support.
- Improve generators.

--- a/lib/generators/ornament/templates/app/assets/stylesheets/application.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,7 @@
 //
 
 @import "components/align";
+@import "components/breadcrumbs";
 @import "components/button";
 @import "components/clearfix";
 @import "components/environment";
@@ -34,10 +35,12 @@
 @import "components/heading";
 @import "components/island";
 @import "components/layout";
+@import "components/list";
 @import "components/navigation";
 @import "components/navigation-dropdown";
 @import "components/navigation-horizontal";
 @import "components/normalize";
+@import "components/pagination";
 @import "components/skip-link";
 @import "components/slider";
 @import "components/spacing";
