--- a/lib/generators/ornament/templates/app/assets/stylesheets/ornament/_core.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/ornament/_core.css.scss
@@ -17,7 +17,6 @@
 @import "settings";
 @import "ornament/reset";
 @import "ornament/style";
-@import "mixins/heading";
-@import "mixins/table";
+@import "normalize";
 
 
