--- a/lib/generators/ornament/templates/app/views/styleguide/index.html.erb
+++ b/lib/generators/ornament/templates/app/views/styleguide/index.html.erb
@@ -1,31 +1,34 @@
-<% content_for :title, "Components" %>
+<% content_for :title, "Styleguide" %>
 
-<div class="spacing">
+<% content_for :breadcrumbs do %>
+  <ol class="breadcrumbs">
+    <li><%= link_to "Home", root_path %></li>
+    <li>Styleguide</li>
+  </ol>
+<% end %>
 
-  <ul>
-    <li><a href="/styleguide/align">Align</a></li>
-    <li><a href="/styleguide/button">Button</a></li>
-    <li><a href="/styleguide/clearfix">Clearfix</a></li>
-    <li><a href="/styleguide/environment">Environment</a></li>
-    <li><a href="/styleguide/field">Field</a></li>
-    <li><a href="/styleguide/float">Float</a></li>
-    <li><a href="/styleguide/footer">Footer</a></li>
-    <li><a href="/styleguide/gallery">Gallery</a></li>
-    <li><a href="/styleguide/header">Header</a></li>
-    <li><a href="/styleguide/heading">Heading</a></li>
-    <li><a href="/styleguide/island">Island</a></li>
-    <li><a href="/styleguide/layout">Layout</a></li>
-    <li><a href="/styleguide/navigation">Navigation</a></li>
-    <li><a href="/styleguide/navigation_dropdown">Navigation Dropdown</a></li>
-    <li><a href="/styleguide/navigation_horizontal">Navigation Horizontal</a></li>
-    <li><a href="/styleguide/normalize">Normalize</a></li>
-    <li><a href="/styleguide/skip_link">Skip Link</a></li>
-    <li><a href="/styleguide/slider">Slider</a></li>
-    <li><a href="/styleguide/spacing">Spacing</a></li>
-    <li><a href="/styleguide/split">Split</a></li>
-    <li><a href="/styleguide/tab-set">Tab Set</a></li>
-    <li><a href="/styleguide/table">Table</a></li>
-    <li><a href="/styleguide/tooltip">Tooltip</a></li>
-  </ul>
-
-</div>
+<ul>
+  <li><a href="/styleguide/align">Align</a></li>
+  <li><a href="/styleguide/button">Button</a></li>
+  <li><a href="/styleguide/clearfix">Clearfix</a></li>
+  <li><a href="/styleguide/environment">Environment</a></li>
+  <li><a href="/styleguide/field">Field</a></li>
+  <li><a href="/styleguide/float">Float</a></li>
+  <li><a href="/styleguide/footer">Footer</a></li>
+  <li><a href="/styleguide/gallery">Gallery</a></li>
+  <li><a href="/styleguide/header">Header</a></li>
+  <li><a href="/styleguide/heading">Heading</a></li>
+  <li><a href="/styleguide/island">Island</a></li>
+  <li><a href="/styleguide/layout">Layout</a></li>
+  <li><a href="/styleguide/navigation">Navigation</a></li>
+  <li><a href="/styleguide/navigation_dropdown">Navigation Dropdown</a></li>
+  <li><a href="/styleguide/navigation_horizontal">Navigation Horizontal</a></li>
+  <li><a href="/styleguide/normalize">Normalize</a></li>
+  <li><a href="/styleguide/skip_link">Skip Link</a></li>
+  <li><a href="/styleguide/slider">Slider</a></li>
+  <li><a href="/styleguide/spacing">Spacing</a></li>
+  <li><a href="/styleguide/split">Split</a></li>
+  <li><a href="/styleguide/tab-set">Tab Set</a></li>
+  <li><a href="/styleguide/table">Table</a></li>
+  <li><a href="/styleguide/tooltip">Tooltip</a></li>
+</ul>
