--- a/lib/generators/ornament/templates/app/assets/stylesheets/components/_normalize.css.scss
+++ b/lib/generators/ornament/templates/app/assets/stylesheets/components/_normalize.css.scss
@@ -1,7 +1,7 @@
 .normalize {
 
   > * + * {
-    margin-top: $default-unit;
+    margin-top: $x-small-unit;
   }
 
   a,
@@ -23,37 +23,35 @@
   }
 
   h1 {
-    @include heading-one;
+    @include h1;
   }
 
   h2 {
-    @include heading-two;
+    @include h2;
   }
 
   h3 {
-    @include heading-three;
+    @include h3;
   }
 
   h4 {
-    @include heading-four;
+    @include h4;
   }
 
   h5 {
-    @include heading-five;
+    @include h5;
   }
 
   h6 {
-    @include heading-six;
+    @include h6;
   }
 
   ul {
-    list-style-type: disc;
-    padding-left: 1.2em;
+    @include ul;
   }
 
   ol {
-    list-style-type: decimal;
-    padding-left: 1.2em;
+    @include ol;
   }
 
   table {
