--- a/lib/generators/ornament/templates/app/views/layouts/application.html.erb
+++ b/lib/generators/ornament/templates/app/views/layouts/application.html.erb
@@ -1,10 +1,27 @@
 <% content_for :global do %>
   <div class="spacing-loose">
-    <% if content_for? :title %>
-      <h1 class="heading-one">
-        <%= yield :title %>
-      </h1>
+    <% flash.each do |name, message| %>
+      <%= content_tag :div, message, class: [ "island", "island-#{name}" ] %>
     <% end %>
+    <div>
+      <% if content_for?(:title) || content_for?(:actions) %>
+        <div class="split">
+          <div>
+            <h1 class="heading-one">
+              <%= yield :title %>
+            </h1>
+          </div>
+          <div>
+            <%= yield :actions %>
+          </div>
+        </div>
+      <% end %>
+      <% if content_for?(:breadcrumbs) %>
+        <div>
+          <%= yield :breadcrumbs %>
+        </div>
+      <% end %>
+    </div>
     <div>
       <%= content_for?(:application) ? yield(:application) : yield %>
     </div>
